@@ -1,3 +1,8 @@
+Sun Mar 11 20:25:06 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
+
+	* Fixed a minor bug if WHOIS and IDENTIFY command parsing that
+	  just surfaced after chaning the JOIN procedure.
+
 Sun Mar 11 14:59:05 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
 
 	* Added silc_client_get_clients_by_list to get client entries
